--- a/inst/rmarkdown/templates/scatterplots/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/scatterplots/skeleton/skeleton.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Scatterplots"
-output: html_document
+output: pdf_document
 ---
 
 In this exercise we will use the Add Health data to make scatter plots. 
  
-```{r, echo=FALSE, message=FALSE}
+```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
 # This first part loads the programs we need.
 library(ggplot2)
 library(lehmansociology)
@@ -13,11 +13,15 @@ library(grid)
 library(scales)
 library(magrittr)
 library("dplyr")
-
-
+library(broom)
+library(xtable)
 # Attache the data
 attach(addhealth)
+# Set options for nicer looking documents
+options(xtable.comment = FALSE)
+knitr::opts_chunk$set(message=FALSE, warning=FALSE)
 ```
+
 
 Let's look at the relationship of age and tvhrs. 
 
@@ -30,17 +34,18 @@ Remember that the + signs should go at the end of the lines.
 
 The (method="lm") stands for use a "linear model" to create the line.  That is, use a straight line based on standard linear regression as shown in the text book.
 
-```{r}
-ggplot(addhealth, aes(age, tvhrs)) + geom_point() + stat_smooth(method="lm")
+```{r all_data_graph}
 
-
+#ggplot(addhealth, aes(age, tvhrs, color=raceeth)) + geom_point()  + stat_smooth(method="lm")
+ggplot(addhealth, aes(age, tvhrs)) + geom_point()  + stat_smooth(method="lm")
 
 ```
 Overall, how would you describe the relationship between age and tvhours based on this graph?
 
 We can also look at the plots for different race/ethnicity groups
 How would you describe those relationships?
-```{r}
+```{r group_graphs}
+
 ggplot(addhealth, aes(age, tvhrs)) + geom_point() +
 	stat_smooth(method="lm")+
 	facet_wrap(~raceeth)
@@ -50,10 +55,9 @@ ggplot(addhealth, aes(age, tvhrs)) + geom_point() +
 
 We can also describe the plot numerically using a regression equation.
 
-```{r}
+```{r regression1, tidy=TRUE, results="asis"}
 reg1 <- lm(tvhrs~age)
-coef(summary(reg1))
-
+print(xtable(coef(summary(reg1))))
 
 ```
 What sign is the estimate for age?
@@ -64,11 +68,13 @@ Does the direction of the Estimate match the direction shown in the graph?
 
 Now let's do separate regressions by race/ethnicity.
 This is a little complicated by the code says to use the addhealth data, broken down by the raceeth variable using the tbhrs ~age model
-```{r}
-regbygroup <- addhealth %>% group_by(raceeth) %>% do(model = lm(tvhrs ~ age, data = .))
+```{r tidy=TRUE, results="asis"}
+regbygroup <- addhealth %>% 
+  group_by(raceeth) %>% 
+  do(model = lm(tvhrs ~ age, data = .))
 
-names(regbygroup$model)<-regbygroup$raceeth
-regbygroup$model
+results <- tidy(regbygroup, model)
+print(xtable(results))
 
 ```
 Are all of the coefficients the same sign?
@@ -77,4 +83,6 @@ If not, which are positive and which are negative?
 
 How do the coefficients for age by race/ethnicity relate to the graphs?
 
-Summarize what the data show about the relationship of age and hours spent watching television by race and ethnicity?
+Summarize what the data show about the relationship of age and hours spent watching television by race and ethnicity.
+
+
