--- a/inst/rmarkdown/templates/educationincomeunivariate/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/educationincomeunivariate/skeleton/skeleton.Rmd
@@ -1,6 +1,7 @@
 ---
 title: 'Univariate Graphs'
 output: pdf_document
+author: 
 ---
 ```{r, echo=FALSE, message=FALSE}
 # Load your libraries here
@@ -30,10 +31,6 @@ lessthanhighschool13 <- select(education.states, Area.name, FIPS.Code, Percent.o
 education_and_poverty<-merge(poverty13, lessthanhighschool13, by.x='FIPS.Code', by.y='FIPS.Code')
 ```
 
- 
-
-
-
 ## Interval variables
 
 Let's start by looking at interval and ratio variables variables. 
@@ -44,9 +41,9 @@ Is the percent of population in a state who lives in poverty a discrete variable
 
 
 We are going to start with three related graphs:
--stem and leaf
--dot plot, and
--histogram.
+* stem and leaf
+* dot plot, and
+* histogram.
 
 Make sure you add a title and labels. You can also change colors and other details.
 
@@ -58,7 +55,7 @@ stem(education_and_poverty$PCTPOVALL_2013, scale = 2)
 ggplot(education_and_poverty,
        aes(x=PCTPOVALL_2013),
        scale_y_continuous(breaks=NULL)) +
-     geom_dotplot(binwidth=1 ) +
+     geom_dotplot(binwidth=1) +
      geom_rug() +
   labs( x="Percent in Poverty") +
   scale_y_continuous(breaks=NULL) +
@@ -72,15 +69,37 @@ ggplot(education_and_poverty, aes(PCTPOVALL_2013)) +
   ggtitle("Fig # :")
 
 ````
+Some things you may want to do to make the interpretation of the dotplot and histogram a bit easier are:
+ make the x axis have the same tick marks (numbers and lines)
+ change the binwidth to match (try .5 or 1 for example, but others too)
+ add some vertical lines, such as for the mean, median and quartiles
+ 
+Layers you might want to add (which will add vertical lines).  
+Make sure you have a + sign at the end of lines before new lines you add.
+
+ geom_vline(aes ( xintercept  = median(education_and_poverty$PCTPOVALL_2013)))
+ geom_vline(aes ( xintercept  = mean(education_and_poverty$PCTPOVALL_2013)))
+
+
+ quartile1 <- quantile(education_and_poverty$PCTPOVALL_2013, probs=c(.25))
+ quartile3 <- quantile(education_and_poverty$PCTPOVALL_2013, probs=c(.75))
+ geom_vline(aes ( xintercept  = quartile1, color="red"))
+ geom_vline(aes ( xintercept  = quartile3, color="blue"))
+
+ Note that using these quartiles will create a warning message, but it is because of
+a harmless bug so don't worry about it.
+ Put the calculation of the quartiles before the creation of the graphs.
+
 
 We'll also do a bar chart that technically has two variables, state and poverty rate.
+In bar charts the x variable is discrete, so notice that there is a space between the bars.
 ```{r}
 
 ggplot(education_and_poverty, 
        aes(x= reorder(Area_Name, PCTPOVALL_2013), y = PCTPOVALL_2013)) +
   geom_bar(stat="identity") +
   labs(y = "Percent in Poverty",     x="State") +
-     # This line is going to rotate the state names by 90 degrees)
+     # This line is going to rotate the state names by 90 degrees. You can try other values.
     theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
   ggtitle("Fig # :")
 
@@ -90,25 +109,7 @@ ggplot(education_and_poverty,
 
 Working with a partner or group, try to figure out how the four representations of PCTPOVALL_2013 related to each other. 
 
-Some things you may want to do to make the interpretation of the dotplot and histogram a bit easier are:
- make the x axis have the same tick marks (numbers and lines)
- change the binwidth to match (try .5 or 1 for example, but others too)
- add some vertical lines, such as for the mean, median and quartiles
- 
-Layers you might want to add (which will add vertical lines).  
-Make sure you have a + sign at the end of lines before new lines you add.
 
-geom_vline(aes ( xintercept  = median(education_and_poverty$PCTPOVALL_2013)))
-geom_vline(aes ( xintercept  = mean(education_and_poverty$PCTPOVALL_2013)))
-
-Note that using these quartiles will create a warning message, but it is because of
-a bug so don't worry about it.
-Put the calculation of the quartiles before the creation of the graphs.
-
-quartile1 <- quantile(education_and_poverty$PCTPOVALL_2013, probs=c(.25))
-quartile3 <- quantile(education_and_poverty$PCTPOVALL_2013, probs=c(.75))
-geom_vline(aes ( xintercept  = quartile1, color="red"))
-geom_vline(aes ( xintercept  = quartile3, color="blue"))
 
  Also you can change colors and fonts.
 
@@ -117,8 +118,52 @@ geom_vline(aes ( xintercept  = quartile3, color="blue"))
  -Which gives you the most detailed information?
  -Which (in your opinion) does best at showing you the distribution of the variable?
  
- 
+Now we are going to look at one more way to show the state level data that is only possible because the data are geographic: a map.
+
+```{r}
+# First we need to load an extra library
+library(maps)
+states_map <- map_data("state")
+
+# We'll use this library if we want to play with colors in the maps
+library("RColorBrewer")
+```
+If you look at the states_map data you will see that the state names are in lower case.
+Unfortunately our Area_Name variable is in upper case so ... it won't match.  So first we have to deal with that and then we can merge the map data and our education_and_poverty data together.
+
+```{r}
+education_and_poverty$state = tolower(education_and_poverty$Area_Name)
+
+education_and_poverty_map<-merge(states_map, education_and_poverty, 
+                                 by.x = "region", by.y="state")
 
 
-geom_vline(aes ( xintercept  = mean(education_and_poverty$PCTPOVALL_2013)))
-  geom_histogram(binwidth = 1, aes(  y=(..count..)/sum(..count..))) + 
+```
+
+
+Next we make the map
+```{r}
+# If you want to try colors uncomment the next line and change to the color you want.
+# Also uncomment the scale_fill_gradientn line.
+# You can change the color and the number of colors.
+
+#colors<-brewer.pal(7,"Greens")
+ggplot(education_and_poverty_map, aes(x=long, y = lat, group = group, 
+                                      map_id = region, fill = PCTPOVALL_2013)) +
+  geom_map(map = education_and_poverty_map, color = "black" ) +
+  #scale_fill_gradientn(colors=colors) +
+  coord_map("polyconic") +
+  ggtitle("Fig #: ")
+
+  
+
+
+```
+
+Did the map give you any additional information? 
+
+How useful is the map compared to the other formats?
+
+If you were going to write a report about the distribution of poverty rates among states which graph or graphs would you include? Why?
+
+
