--- a/inst/rmarkdown/templates/readsheets/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/readsheets/skeleton/skeleton.Rmd
@@ -20,7 +20,7 @@ First we are going to read the Google spreadsheet into an R data set.
 ````{r read_sheet}
 
 gs<-gs_url('https://docs.google.com/spreadsheets/d/12D6k6Xji94pK4HdfgUNjPEJqM_sYIBigN_7pZuJ_Kug/pubhtml')
-data<-gs_read(gs)
+mydata<-gs_read(gs)
 
 
 ````
@@ -29,12 +29,12 @@ Now create the proportions
 
 ```{r create_proportions}
 # Finish these commands 
-data$n<-sum()
+mydata$n<-sum(mydata$)
 
-data$p.lt_hs<-    
-data$p.hs_degree<-
-data$p.some_college<-
-data$p.college<-
+mydata$p.lt_hs<-    
+mydata$p.hs_degree<-
+mydata$p.some_college<-
+mydata$p.college<-
   
 
 ```
@@ -43,9 +43,9 @@ Now create the cumulative proportions
 
 ```{r create_cum_percents}
 
-data$p.hs_degree_or_less<-
-data$p.some_college_or_less<-
-data$p.college_or_less<-
+mydata$p.hs_degree_or_less<-
+mydata$p.some_college_or_less<-
+mydata$p.college_or_less<-
 
 
 ```
@@ -61,7 +61,7 @@ You need to make sure to put the variable name in the aes()  layer.
 
 ```{r}
 
-ggplot(data, aes(, fill="red")) +
+ggplot(mydata, aes(, fill="red")) +
   geom_histogram(binwidth=1) +
   labs(y = "Count",     x="") +
   ggtitle("Fig # : ")
