Fix annoying yaml issue and some markdown.

--- a/inst/rmarkdown/templates/educationincomeunivariate/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/educationincomeunivariate/skeleton/skeleton.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'Univariate Graphs'
 output: pdf_document
-author: 
+author: ''
 ---
 ```{r, echo=FALSE, message=FALSE, label="libraries"}
 # Load your libraries here
