--- a/inst/rmarkdown/templates/highstakes1waring/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/highstakes1waring/skeleton/skeleton.Rmd
@@ -1,7 +1,7 @@
 ---
 title: ""
 author: ""
-output: html_document
+output: pdf_document
 ---
 
 
@@ -14,6 +14,7 @@ library('ggplot2')
 library('maps')
 library('googlesheets')
 library('mapproj')
+library('dplyr')
 
 ```
 
@@ -34,20 +35,10 @@ Text describing the two variables you have chosen
 ````
 
 
-
-# Data Description
-
-Describe your variables
-
-
-````{r graph1}
-#type your code here
-
-````
-
 # Analysis
 
-You can rearrange these 
+Text
+
 ````{r graph2}
 #type your code here
 
@@ -87,4 +78,6 @@ Text
 
 # Conclusion
 
+Text
 
+Any references
